--- a/src/components/contact/components/ContactUsForm/ContactUsForm.module.scss
+++ b/src/components/contact/components/ContactUsForm/ContactUsForm.module.scss
@@ -1,7 +1,7 @@
 @import ".././../../../styles/variables";
 @import ".././../../../styles/mixins";
 .section-contact-form {
-  padding-top: calc($header-height + $header-padding);
+  padding-top: calc($header-height + $header-padding + $section-padding);
   background: linear-gradient(
     180deg,
     #131313 -26.11%,
